@@ -8,3 +8,4 @@ CONTRIBUTORS
 Carl J. Meyer
 Jaap Roes
 Bojan Mihelac
+Sébastien Fievet
